Update fix style contrast colors

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -89,7 +89,7 @@
     top: -40px;
     left: 0;
     background: var(--accent-color);
-    color: white;
+    color: var(--text-against-accent);
     padding: 8px;
     z-index: 1000;
     transition: top 0.2s;
